Fix compilation errors due to MCP 1.1 naming changes Introduce server class name obfuscation protection to server mod_Guns