@@ -10,7 +10,6 @@ import com.heuristix.util.InvokeMethod;
 import com.heuristix.util.Method;
 import com.heuristix.util.Pair;
 
-import javax.imageio.ImageIO;
 import java.io.*;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
@@ -33,14 +32,19 @@ public class mod_Guns extends ModMP {
     private static int uniqueId;
 
     private static final Map<String, ItemProjectile> projectiles = new HashMap<String, ItemProjectile>();
+    private static final Map<Class,String> obfuscatedClasses = new HashMap<Class, String>();
 
+    static {
+        obfuscatedClasses.put(World.class, "fq");
+        obfuscatedClasses.put(EntityLiving.class, "lx");
+    }
 
     public mod_Guns() {
         load();
     }
 
     @Override
-    public String Version() {
+    public String getVersion() {
         return "0.9.3" + " for " + CURRENT_VERSION;
     }
 
@@ -89,19 +93,20 @@ public class mod_Guns extends ModMP {
         Class entityBulletClass = classes.get(gunClasses.get(0).getFirst());
         if (entityBulletClass == null) {
             byte[] entityBulletClassBytes = gunClasses.get(0).getSecond();
-            if (DEBUG) {
-                byte[] moddedBytes = ExtensibleClassAdapter.modifyClassBytes(entityBulletClassBytes, gunClasses.get(0).getFirst() + "CheckSuper", new HashMap<String, Method>(), false);
-                Class projectileType = Util.defineClass(moddedBytes, null, EntityProjectile.class.getClassLoader()).getSuperclass();
-                HashMap<String, Method> methods = new HashMap<String, Method>();
-                for (int i = 0; i < GunCreator.OBFUSCATED_CLASS_NAMES.size(); i++) {
-                    Pair<String, String> obfuscatedNames = GunCreator.OBFUSCATED_CLASS_NAMES.get(i);
-                    methods.put("<init>(L" + obfuscatedNames.getFirst() + ";L" + obfuscatedNames.getSecond() + ";)V", new Method("(Lnet/minecraft/src/World;Lnet/minecraft/src/EntityLiving;)V",
-                            new InvokeMethod(GunCreator.SUPER_WORLD_ENTITY, new int[]{Opcodes.RETURN}, projectileType.getCanonicalName().replace('.', '/'), "<init>", "(Lnet/minecraft/src/World;Lnet/minecraft/src/EntityLiving;)V", false, true, false)));
-                    methods.put("<init>(L" + obfuscatedNames.getFirst() + ";)V", new Method("(Lnet/minecraft/src/World;)V",
-                            new InvokeMethod(GunCreator.SUPER_WORLD, new int[]{Opcodes.RETURN}, projectileType.getCanonicalName().replace('.', '/'), "<init>", "(Lnet/minecraft/src/World;)V", false, true, false)));
-                }
-                entityBulletClassBytes = ExtensibleClassAdapter.modifyClassBytes(entityBulletClassBytes, gunClasses.get(0).getFirst(), methods, false);
+            byte[] moddedBytes = ExtensibleClassAdapter.modifyClassBytes(entityBulletClassBytes, gunClasses.get(0).getFirst() + "CheckSuper", new HashMap<String, Method>(), false);
+            Class projectileType = Util.defineClass(moddedBytes, null, EntityProjectile.class.getClassLoader()).getSuperclass();
+            HashMap<String, Method> methods = new HashMap<String, Method>();
+            String worldClass = (DEBUG) ? "net/minecraft/src/World" : obfuscatedClasses.get(World.class);
+            String entityLivingClass = (DEBUG) ? "net/minecraft/src/EntityLiving" : obfuscatedClasses.get(EntityLiving.class);
+            for (int i = 0; i < GunCreator.OBFUSCATED_CLASS_NAMES.size(); i++) {
+                Pair<String, String> obfuscatedNames = GunCreator.OBFUSCATED_CLASS_NAMES.get(i);
+
+                methods.put("<init>(L" + obfuscatedNames.getFirst() + ";L" + obfuscatedNames.getSecond() + ";)V", new Method("(L" + worldClass + ";L" + entityLivingClass + ";)V",
+                        new InvokeMethod(GunCreator.SUPER_WORLD_ENTITY, new int[]{Opcodes.RETURN}, projectileType.getCanonicalName().replace('.', '/'), "<init>", "(L" + worldClass + ";L" + entityLivingClass + ";)V", false, true, false)));
+                methods.put("<init>(L" + obfuscatedNames.getFirst() + ";)V", new Method("(L" + worldClass + ";)V",
+                        new InvokeMethod(GunCreator.SUPER_WORLD, new int[]{Opcodes.RETURN}, projectileType.getCanonicalName().replace('.', '/'), "<init>", "(L" + worldClass + ";)V", false, true, false)));
             }
+            entityBulletClassBytes = ExtensibleClassAdapter.modifyClassBytes(entityBulletClassBytes, gunClasses.get(0).getFirst(), methods, false);
             entityBulletClass = Util.defineClass(entityBulletClassBytes, null/*gunClasses.get(0).getFirst()*/, EntityProjectile.class.getClassLoader());
             classes.put(entityBulletClass.getName(), entityBulletClass);
         }
